--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,9 @@
     <title>EcoCharge - Home</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="home-page">
     <!-- Header with app title -->
-    <header>
+    <header class="app-header">
         <h1 id="appTitle">EcoCharge</h1>
         <p class="slogan">Charge your brain without melting the planet!</p>
     </header>
@@ -20,9 +20,9 @@
     </div>
     
     <!-- Goal section -->
-    <section id="goalSection">
+    <section id="goalSection" class="goal-section">
         <h2>Our Goal</h2>
-        <p>Sustainable Cities And Communities Rely On Clean Energy, Fairness, And Inclusive Design...</p>
+        <p>Sustainable Cities And Communities Rely On Clean Energy, Fairness, And Inclusive Design. However, Many People Still Depend On Non-Renewable Energy Sources Due To A Lack Of Engaging Education About Their Harmful Effects. To Tackle This, We Will Create EcoCharge — An Interactive And Educational Web App That Captures Users' Imagination Through Challenges, Quizzes, Videos, And Eco-Missions.</p>
     </section>
     
     <script src="js/main.js"></script>
